// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Content renders classname 1`] = `
<div
  className="className"
/>
`;

exports[`Content renders content 1`] = `
<div>
  Content
</div>
`;

exports[`Content renders content and classname 1`] = `
<div
  className="className"
>
  Content
</div>
`;

exports[`HTMLContent renders classname 1`] = `
<div
  className="className"
  dangerouslySetInnerHTML={
    {
      "__html": undefined,
    }
  }
/>
`;

exports[`HTMLContent renders content 1`] = `
<div
  dangerouslySetInnerHTML={
    {
      "__html": {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "children": "HTMLContent",
        },
        "type": "div",
      },
    }
  }
/>
`;

exports[`HTMLContent renders content and classname 1`] = `
<div
  className="className"
  dangerouslySetInnerHTML={
    {
      "__html": {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "children": "HTMLContent",
        },
        "type": "div",
      },
    }
  }
/>
`;
